import java.util.*;

public class FoundationVocabItem {
    private String id;
    private String unitId;
    private String word;
    private String meaning;
    private String ipa;
    private String partOfSpeech;
    private String example;
    private String imageUrl;
    private String audioUrl;
    private Integer order;
    private Date createdAt;
    private Date updatedAt;
}
