import java.util.*;

public class FoundationVocabWord {
    private String id;
    private String lessonId;
    private String word;
    private String meaning;
    private String ipa;
    private String audioUrl;
    private String example;
    private String partOfSpeech;
    private Date createdAt;
    private Date updatedAt;
    private List<FoundationPronunciationAttempt> pronunciationAttempts;
}
