import java.util.*;

public class Grammar {
    private String id;
    private String lessonId;
    private String title;
    private String rule;
    private String example;
    private Date createdAt;
    private Date updatedAt;
}
