import java.util.*;

public class FoundationGrammarProgress {
    private String id;
    private String userId;
    private String unitId;
    private Boolean theoryCompleted;
    private Integer exerciseScore;
    private Integer exerciseTotal;
    private Date completedAt;
    private Date createdAt;
    private Date updatedAt;
    private User user;
    private FoundationGrammarUnit unit;
}
