import java.util.*;

public class FoundationVocabExercise {
    private String id;
    private String unitId;
    private String question;
    private String answer;
    private Object options;
    private Integer order;
    private FoundationVocabUnit unit;
}
