import java.util.*;

public class FoundationVocabQuestion {
    private String id;
    private String unitId;
    private String question;
    private String type;
    private Object options;
    private String answer;
    private Integer order;
    private FoundationVocabUnit unit;
}
