import java.util.*;

public class IeltsAdvancedReadingPart {
    private String id;
    private String title;
    private Integer partNumber;
    private String passage;
    private Object passageWithLocations;
    private Object content;
    private List<String> questionTypes;
    private Date createdAt;
    private Date updatedAt;
    private List<IeltsAdvancedReadingSession> sessions;
}
