import java.util.*;

public class IeltsAdvancedSpeakingPart {
    private String id;
    private Integer partNumber;
    private String partType;
    private String topic;
    private String source;
    private String category;
    private Integer bookNumber;
    private Integer testNumber;
    private String title;
}
