import java.util.*;

public class IeltsAdvancedWritingPrompt {
    private String id;
    private String taskType;
    private String subType;
    private String source;
    private String category;
    private Integer bookNumber;
    private Integer testNumber;
    private String title;
    private String prompt;
    private String imageUrl;
    private Integer minimumWords;
    private Integer suggestedTime;
    private String difficulty;
    private String engnovateSlug;
    private Boolean isPublished;
    private Date createdAt;
    private Date updatedAt;
    private List<IeltsAdvancedWritingSession> sessions;
}
