import java.util.*;

public class IeltsBasicProgress {
    private String id;
    private String userId;
    private String lessonId;
    private String listeningExerciseId;
    private String readingExerciseId;
    private String writingExerciseId;
    private String speakingExerciseId;
    private Boolean isCompleted;
    private Date createdAt;
    private Date updatedAt;
    private User user;
    private IeltsBasicLesson lesson;
    private IeltsBasicListeningExercise listeningExercise;
    private IeltsBasicReadingExercise readingExercise;
    private IeltsBasicWritingExercise writingExercise;
    private IeltsBasicSpeakingExercise speakingExercise;
}
