import java.util.*;

public class IeltsBasicSkill {
    private String id;
    private String name;
    private Integer order;
    private List<IeltsBasicLesson> lessons;
    private List<IeltsBasicListeningExercise> listeningExercises;
    private List<IeltsBasicReadingExercise> readingExercises;
    private List<IeltsBasicWritingExercise> writingExercises;
    private List<IeltsBasicSpeakingExercise> speakingExercises;
    private Date createdAt;
    private Date updatedAt;
}
