import java.util.*;

public class IeltsBasicWritingAnswer {
    private String id;
    private String userId;
    private String writingExerciseId;
}
