import java.util.*;

public class IeltsProfile {
    private String id;
    private String userId;
    private Double targetBand;
    private Integer dailyCommitmentMins;
    private Date examDate;
    private Integer placementScore;
    private Integer placementListening;
    private Integer placementReading;
    private Integer placementWriting;
    private Boolean onboardingCompleted;
    private Integer currentStreak;
    private Integer longestStreak;
    private Date lastActiveDate;
    private Integer totalXp;
    private Integer level;
    private Date createdAt;
    private Date updatedAt;
    private User user;
}
