classDiagram
    %% ══════════════ User & Profile ══════════════
    class User {
        -id : String
        -email : String
        -password : String
        -googleId : String
        -avatar : String
        -firstName : String
        -lastName : String
        -role : UserRole
        -isActive : Boolean
        -createdAt : Date
        -updatedAt : Date
    }
    class IeltsProfile {
        -id : String
        -userId : String
        -targetBand : Float
        -dailyCommitmentMins : Int
        -examDate : Date
        -placementScore : Int
        -placementListening : Int
        -placementReading : Int
        -placementWriting : Int
        -onboardingCompleted : Boolean
        -currentStreak : Int
        -longestStreak : Int
        -lastActiveDate : Date
        -totalXp : Int
        -level : Int
        -createdAt : Date
        -updatedAt : Date
    }
    class UserRole {
        <<enumeration>>
        STUDENT
        ADMIN
        INSTRUCTOR
    }
    User "1" -- "0..*" IeltsProfile
    User ..> UserRole

    %% ══════════════ Foundation Vocab Book ══════════════
    class FoundationVocabBook {
        -id : String
        -name : String
        -imageUrl : String
        -wordCount : Int
        -order : Int
        -createdAt : Date
        -updatedAt : Date
    }
    class FoundationVocabUnit {
        -id : String
        -bookId : String
        -title : String
        -order : Int
        -storyTitle : String
        -storyContent : String
        -storyImageUrl : String
        -createdAt : Date
        -updatedAt : Date
    }
    class FoundationVocabItem {
        -id : String
        -unitId : String
        -word : String
        -meaning : String
        -ipa : String
        -partOfSpeech : String
        -example : String
        -imageUrl : String
        -audioUrl : String
        -order : Int
        -createdAt : Date
        -updatedAt : Date
    }
    class FoundationVocabExercise {
        -id : String
        -unitId : String
        -question : String
        -answer : String
        -options : Object
        -order : Int
    }
    class FoundationVocabQuestion {
        -id : String
        -unitId : String
        -question : String
        -type : String
        -options : Object
        -answer : String
        -order : Int
    }
    class FoundationVocabProgress {
        -id : String
        -userId : String
        -unitId : String
        -wordsLearned : Int
        -totalWords : Int
        -exerciseScore : Int
        -questionScore : Int
        -isCompleted : Boolean
        -completedAt : Date
        -createdAt : Date
        -updatedAt : Date
    }
    FoundationVocabBook "1" -- "0..*" FoundationVocabUnit
    FoundationVocabUnit "1" -- "0..*" FoundationVocabItem
    FoundationVocabUnit "1" -- "0..*" FoundationVocabExercise
    FoundationVocabUnit "1" -- "0..*" FoundationVocabQuestion
    FoundationVocabUnit "1" -- "0..*" FoundationVocabProgress

    %% ══════════════ Foundation Vocab Lesson ══════════════
    class FoundationVocabLesson {
        -id : String
        -title : String
        -description : String
        -difficulty : Difficulty
        -order : Int
        -isPublished : Boolean
        -createdAt : Date
        -updatedAt : Date
    }
    class FoundationVocabWord {
        -id : String
        -lessonId : String
        -word : String
        -meaning : String
        -ipa : String
        -audioUrl : String
        -example : String
        -partOfSpeech : String
        -createdAt : Date
        -updatedAt : Date
    }
    class Grammar {
        -id : String
        -lessonId : String
        -title : String
        -rule : String
        -example : String
        -createdAt : Date
        -updatedAt : Date
    }
    class Difficulty {
        <<enumeration>>
        BEGINNER
        INTERMEDIATE
        ADVANCED
    }
    FoundationVocabLesson "1" -- "0..*" FoundationVocabWord
    FoundationVocabLesson "1" -- "0..*" Grammar
    FoundationVocabLesson ..> Difficulty

    %% ══════════════ Foundation Grammar ══════════════
    class FoundationGrammarBook {
        -id : String
        -slug : String
        -name : String
        -author : String
        -level : String
        -imageUrl : String
        -color : String
        -unitCount : Int
        -createdAt : Date
        -updatedAt : Date
    }
    class FoundationGrammarUnit {
        -id : String
        -bookId : String
        -title : String
        -order : Int
        -theoryContent : String
        -createdAt : Date
        -updatedAt : Date
    }
    class FoundationGrammarExercise {
        -id : String
        -unitId : String
        -section : String
        -question : String
        -type : String
        -options : Object
        -answer : String
        -order : Int
    }
    class FoundationGrammarProgress {
        -id : String
        -userId : String
        -unitId : String
        -theoryCompleted : Boolean
        -exerciseScore : Int
        -exerciseTotal : Int
        -completedAt : Date
        -createdAt : Date
        -updatedAt : Date
    }
    FoundationGrammarBook "1" -- "0..*" FoundationGrammarUnit
    FoundationGrammarUnit "1" -- "0..*" FoundationGrammarExercise
    FoundationGrammarUnit "1" -- "0..*" FoundationGrammarProgress

    %% ══════════════ Foundation Pronunciation ══════════════
    class FoundationPronunciationSound {
        -id : String
        -symbol : String
        -type : String
        -word : String
        -name : String
        -description : String
        -tip : String
        -imageUrl : String
        -audioUrl : String
        -videoUrl : String
        -voiced : Boolean
        -order : Int
        -createdAt : Date
        -updatedAt : Date
    }
    class FoundationSoundExample {
        -id : String
        -soundId : String
        -word : String
        -ipa : String
        -audioUrl : String
        -order : Int
    }
    class FoundationPronunciationProgress {
        -id : String
        -userId : String
        -soundId : String
        -status : PronunciationMastery
        -practiceCount : Int
        -bestScore : Int
        -lastPracticedAt : Date
        -createdAt : Date
        -updatedAt : Date
    }
    class FoundationPronunciationAttempt {
        -id : String
        -userId : String
        -vocabularyId : String
        -audioUrl : String
        -transcribedText : String
        -targetWord : String
        -score : Int
        -feedback : Object
        -status : PronunciationStatus
        -createdAt : Date
        -updatedAt : Date
    }
    class PronunciationStatus {
        <<enumeration>>
        PENDING
        PROCESSING
        COMPLETED
        FAILED
    }
    class PronunciationMastery {
        <<enumeration>>
        NEW // Never practiced
        PRACTICING // Practiced but best score < 80
        MASTERED // Best score >= 80
    }
    FoundationPronunciationSound "1" -- "0..*" FoundationSoundExample
    FoundationPronunciationSound "1" -- "0..*" FoundationPronunciationProgress
    FoundationPronunciationAttempt ..> PronunciationStatus
    FoundationPronunciationProgress ..> PronunciationMastery

    %% ══════════════ IELTS Basic ══════════════
    class IeltsBasicSkill {
        -id : String
        -name : String
        -order : Int
        -createdAt : Date
        -updatedAt : Date
    }
    class IeltsBasicLesson {
        -id : String
        -skillId : String
        -chapter : String
        -title : String
        -content : Object
        -quiz : Object
        -order : Int
        -createdAt : Date
        -updatedAt : Date
    }
    class IeltsBasicListeningExercise {
        -id : String
        -skillId : String
        -lessonId : String
        -topic : String
        -instructions : String
        -audioUrl : String
        -transcript : Object
        -content : Object
        -order : Int
        -createdAt : Date
        -updatedAt : Date
    }
    class IeltsBasicReadingExercise {
        -id : String
        -skillId : String
        -lessonId : String
        -topic : String
        -instructions : String
        -passage : String
        -passageWithLocations : Object
        -content : Object
        -order : Int
        -createdAt : Date
        -updatedAt : Date
    }
    class IeltsBasicWritingExercise {
        -id : String
        -skillId : String
        -lessonId : String
        -topic : String
        -instructions : String
        -prompt : String
        -diagramUrl : String
        -modelAnswer : Object
        -order : Int
        -taskType : Int
        -createdAt : Date
        -updatedAt : Date
    }
    class IeltsBasicSpeakingExercise {
        -id : String
        -skillId : String
        -lessonId : String
        -topic : String
        -partType : Int
        -questionType : String
        -instructions : String
        -prompt : String
        -content : Object
        -modelAnswer : Object
        -order : Int
        -createdAt : Date
        -updatedAt : Date
    }
    class IeltsBasicProgress {
        -id : String
        -userId : String
        -lessonId : String
        -listeningExerciseId : String
        -readingExerciseId : String
        -writingExerciseId : String
        -speakingExerciseId : String
        -isCompleted : Boolean
        -createdAt : Date
        -updatedAt : Date
    }
    class IeltsBasicWritingAnswer {
        -id : String
        -userId : String
        -writingExerciseId : String
        -answers : Object
        -score : Int
        -totalBlanks : Int
        -createdAt : Date
        -updatedAt : Date
    }
    IeltsBasicSkill "1" -- "0..*" IeltsBasicLesson
    IeltsBasicSkill "1" -- "0..*" IeltsBasicListeningExercise
    IeltsBasicLesson "1" -- "0..1" IeltsBasicListeningExercise
    IeltsBasicSkill "1" -- "0..*" IeltsBasicReadingExercise
    IeltsBasicLesson "1" -- "0..1" IeltsBasicReadingExercise
    IeltsBasicLesson "1" -- "0..1" IeltsBasicProgress
    IeltsBasicListeningExercise "1" -- "0..1" IeltsBasicProgress
    IeltsBasicReadingExercise "1" -- "0..1" IeltsBasicProgress
    IeltsBasicWritingExercise "1" -- "0..1" IeltsBasicProgress
    IeltsBasicSpeakingExercise "1" -- "0..1" IeltsBasicProgress
    IeltsBasicSkill "1" -- "0..*" IeltsBasicWritingExercise
    IeltsBasicLesson "1" -- "0..1" IeltsBasicWritingExercise
    IeltsBasicWritingExercise "1" -- "0..*" IeltsBasicWritingAnswer
    IeltsBasicSkill "1" -- "0..*" IeltsBasicSpeakingExercise
    IeltsBasicLesson "1" -- "0..1" IeltsBasicSpeakingExercise

    %% ══════════════ IELTS Advanced ══════════════
    class IeltsAdvancedListeningPart {
        -id : String
        -title : String
        -partNumber : Int
        -audioUrl : String
        -transcript : Object
        -content : Object
        -questionTypes : StringArray
        -createdAt : Date
        -updatedAt : Date
    }
    class IeltsAdvancedListeningSession {
        -id : String
        -userId : String
        -partId : String
        -answers : Object
        -scoreData : Object
        -totalScore : Int
        -totalQuestions : Int
        -createdAt : Date
    }
    class IeltsAdvancedReadingPart {
        -id : String
        -title : String
        -partNumber : Int
        -passage : String
        -passageWithLocations : Object
        -content : Object
        -questionTypes : StringArray
        -createdAt : Date
        -updatedAt : Date
    }
    class IeltsAdvancedReadingSession {
        -id : String
        -userId : String
        -partId : String
        -answers : Object
        -scoreData : Object
        -totalScore : Int
        -totalQuestions : Int
        -createdAt : Date
    }
    class IeltsAdvancedWritingPrompt {
        -id : String
        -taskType : String
        -subType : String
        -source : String
        -category : String
        -bookNumber : Int
        -testNumber : Int
        -title : String
        -prompt : String
        -imageUrl : String
        -minimumWords : Int
        -suggestedTime : Int
        -difficulty : String
        -engnovateSlug : String
        -isPublished : Boolean
        -createdAt : Date
        -updatedAt : Date
    }
    class IeltsAdvancedWritingSession {
        -id : String
        -userId : String
        -promptId : String
        -essay : String
        -draftEssay : String
        -timeTaken : Int
        -status : String
        -feedback : Object
        -bandScore : Float
        -createdAt : Date
        -updatedAt : Date
    }
    class IeltsAdvancedSpeakingPart {
        -id : String
        -partNumber : Int
        -partType : String
        -topic : String
        -source : String
        -category : String
        -bookNumber : Int
        -testNumber : Int
        -title : String
        -questions : Object
        -engnovateSlug : String
        -isPublished : Boolean
        -createdAt : Date
        -updatedAt : Date
    }
    class IeltsAdvancedSpeakingSession {
        -id : String
        -userId : String
        -partId : String
        -audioUrls : Object
        -transcription : Object
        -timeTaken : Int
        -status : String
        -feedback : Object
        -bandScore : Float
        -createdAt : Date
        -updatedAt : Date
    }
    IeltsAdvancedListeningPart "1" -- "0..*" IeltsAdvancedListeningSession
    IeltsAdvancedReadingPart "1" -- "0..*" IeltsAdvancedReadingSession
    IeltsAdvancedWritingPrompt "1" -- "0..*" IeltsAdvancedWritingSession
    IeltsAdvancedSpeakingPart "1" -- "0..*" IeltsAdvancedSpeakingSession

    %% ══════════════ Cross-Group Relationships ══════════════
    User "1" -- "0..*" FoundationPronunciationAttempt
    User "1" -- "0..*" FoundationVocabProgress
    User "1" -- "0..*" FoundationGrammarProgress
    User "1" -- "0..*" FoundationPronunciationProgress
    User "1" -- "0..*" IeltsBasicProgress
    User "1" -- "0..*" IeltsBasicWritingAnswer
    User "1" -- "0..*" IeltsAdvancedListeningSession
    User "1" -- "0..*" IeltsAdvancedReadingSession
    User "1" -- "0..*" IeltsAdvancedWritingSession
    User "1" -- "0..*" IeltsAdvancedSpeakingSession
    User "1" -- "0..*" FoundationVocabProgress
    FoundationVocabWord "1" -- "0..1" FoundationPronunciationAttempt
    User "1" -- "0..*" FoundationGrammarProgress
    User "1" -- "0..*" FoundationPronunciationAttempt
    FoundationVocabWord "1" -- "0..1" FoundationPronunciationAttempt
    User "1" -- "0..*" FoundationPronunciationProgress
    User "1" -- "0..*" IeltsBasicProgress
    User "1" -- "0..*" IeltsBasicWritingAnswer
    User "1" -- "0..*" IeltsAdvancedListeningSession
    User "1" -- "0..*" IeltsAdvancedReadingSession
    User "1" -- "0..*" IeltsAdvancedWritingSession
    User "1" -- "0..*" IeltsAdvancedSpeakingSession
